<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Auth Server</string>
    <string name="info">Information</string>
    <string name="warning">Warning</string>
    <string name="error">Error</string>
    
    <!-- Dashboard -->
    <string name="setting">Setting</string>
    <string name="managedb">Manage Database</string>
    <string name="managekey">Manage Key</string>
    
    <!-- Manage DB -->
    <string name="managedb_title">Manage Database</string>
    <string name="initdb">Initialize Database</string>
    <string name="backupdb">Back up Database</string>
    <string name="restoredb">Restore Database</string>
    
    <!-- Manage Key -->
    <string name="managekey_title">Manage Key</string>
    <string name="query">Query</string>
    <string name="query_key">Query Key</string>
    <string name="query_deviceid">Query DevID</string>
    <string name="query_edit">Edit</string>
    <string name="query_apply">Apply</string>
    <string name="query_del">Delete</string>
    <string name="query_insert">Insert</string>
    <string name="query_cancel">Cancel</string>
    <string name="confirm_delete">Make sure to delete this record?</string>
    <string name="delete_ok">Deleted Successfully</string>
    <string name="confirm_apply">Make sure to apply?</string>
    <string name="apply_ok">Applied Successfully</string>
    <string name="confirm_insert">Make sure to insert this record?</string>
    <string name="insert_ok">Inserted Successfully</string>
    
    <!-- Preferences -->
    <string name="pref_title">Preferences</string>
    <string name="pref_category_feature_key">pref_category_feature</string>
    <string name="pref_category_feature_title">Features</string>
    <string name="pref_sms_clean_interval_title">SMS Clean Interval</string>
    <string name="pref_sms_clean_interval_key">pref_sms_clean_interval</string>
    <string name="pref_sms_clean_interval_dlg_title">Set Interval</string>
    
    <!-- Mail -->
    <string name="mail_sender_pwd">canadausa</string>
    <string name="mail_from">From</string>
    <string name="mail_body">Hi, this is an auto mail from %s.</string>
    
    <!-- SQL -->
	<string name="sql_create_database"></string>
	<string name="sql_delete_database"></string>
	<string name="sql_create_table_key">
	CREATE TABLE inspector_auth_key(
		_id INTEGER PRIMARY KEY AUTOINCREMENT, 
		licensekey varchar[16] NOT NULL,
		keytype varchar[8],  
		deviceid varchar[32], 
		phonenum varchar[16], 
		phonemodel varchar[16],
		androidver varchar[8],
		consumedate varchar[24],
		receivermailaddress varchar[128],
		receiverphonenum varchar[16]
		); 
	</string>
	<string name="sql_create_table_trial">
	CREATE TABLE inspector_trial(
		_id INTEGER PRIMARY KEY AUTOINCREMENT, 
		licensekey varchar[8],
		deviceid varchar[32], 
		phonenum varchar[16], 
		phonemodel varchar[16],
		androidver varchar[8],
		consumedate varchar[24],
		receivermailaddress varchar[128],
		receiverphonenum varchar[16]
		); 
	</string>
	<string name="sql_create_index_on_licensekey">CREATE INDEX inspector_index_licensekey ON inspector_auth_key(licensekey);</string>
	<string name="sql_create_index_on_deviceid">CREATE INDEX inspector_index_deviceid ON inspector_auth_key(deviceid);</string>
	<string name="sql_create_index_on_deviceid_trial">CREATE INDEX inspector_index_deviceid_trial ON inspector_trial(deviceid);</string>
	<string name="sql_drop_table">DROP TABLE IF EXISTS %s</string>
	
	<!-- Message -->
	<string name="msg_validate_fail_used_key_cn">错误：该注册码（%s）已被使用</string>
	<string name="msg_validate_fail_used_key_en">ERROR: the key (%s) has been used</string>
	<string name="msg_validate_fail_used_key_jp">ERROR: the key (%s) has been used</string>
	
	<!-- Test -->
	<string name="db_test_name">Test DB</string>
	<string name="sms_test_name">Test SMS</string>

</resources>
