<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    
    <Button android:id="@+id/btn_setting" android:text="@string/setting" 
    	android:layout_height="wrap_content" android:layout_width="200dp" 
    	android:layout_marginTop="20dp" android:layout_gravity="center_horizontal" />
    
    <Button android:id="@+id/btn_managedb" android:text="@string/managedb" 
    	android:layout_height="wrap_content" android:layout_width="200dp" 
    	android:layout_marginTop="20dp" android:layout_gravity="center_horizontal" />
    	
    <Button android:id="@+id/btn_managekey" android:text="@string/managekey" 
    	android:layout_height="wrap_content" android:layout_width="200dp" 
    	android:layout_marginTop="20dp" android:layout_gravity="center_horizontal" />
    	
</LinearLayout>
