<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="wrap_content" android:layout_height="wrap_content" >
	
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:weightSum="1" android:scrollbars="vertical">
	
	<!--===================== Query Area =====================-->
	<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"  
    	android:layout_width="fill_parent" android:layout_height="wrap_content">  
    
    <TableRow android:layout_height="wrap_content" android:id="@+id/tableRow1" android:layout_width="fill_parent">
        <EditText android:layout_width="200dp" android:id="@+id/edit_key" android:layout_height="wrap_content" android:layout_marginLeft="8dp" android:layout_marginTop="8dp" />
        <Button android:id="@+id/querykeybutton" android:text="@string/query_key" android:layout_width="100dp" android:layout_height="wrap_content" android:layout_marginTop="8dp" />
    </TableRow>
    
    <TableRow android:layout_height="wrap_content" android:id="@+id/tableRow2" android:layout_width="fill_parent">
        <EditText android:layout_width="200dp" android:id="@+id/edit_deviceid" android:layout_height="wrap_content" android:layout_marginLeft="8dp" android:layout_marginTop="8dp" />
        <Button android:id="@+id/querydeviceidbutton" android:text="@string/query_deviceid" android:layout_width="100dp" android:layout_height="wrap_content" android:layout_marginTop="8dp" />
    </TableRow>
    
	</TableLayout>
	
	<!-- ===================== Area for displaying key details ===================== -->
	<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"  
    	android:layout_width="fill_parent" android:layout_height="wrap_content">
    	
    	<TableRow android:layout_height="wrap_content" android:id="@+id/tableRow3" android:layout_width="fill_parent">
			<TextView android:id="@+id/title_licensekey" android:text="Key" android:layout_width="100px" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_height="wrap_content" android:layout_marginLeft="4dp" android:layout_marginTop="20dp" />
			<EditText android:id="@+id/value_licensekey" android:text="" android:layout_width="200px" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_height="wrap_content" android:layout_marginTop="20dp" />
    	</TableRow>
    	
    	<TableRow android:layout_height="wrap_content" android:id="@+id/tableRow4" android:layout_width="fill_parent">
			<TextView android:id="@+id/title_keytype" android:text="Type" android:layout_width="100px" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_height="wrap_content" android:layout_marginLeft="4dp" />
			<EditText android:id="@+id/value_keytype" android:text="" android:layout_width="200px" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_height="wrap_content" />
    	</TableRow>
    	
    	<TableRow android:layout_height="wrap_content" android:id="@+id/tableRow5" android:layout_width="fill_parent">
			<TextView android:id="@+id/title_deviceid" android:text="Device ID" android:layout_width="100px" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_height="wrap_content" android:layout_marginLeft="4dp" />
			<EditText android:id="@+id/value_deviceid" android:text="" android:layout_width="200px" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_height="wrap_content" />
    	</TableRow>
    	
    	<TableRow android:layout_height="wrap_content" android:id="@+id/tableRow6" android:layout_width="fill_parent">
			<TextView android:id="@+id/title_phonenum" android:text="P. Num" android:layout_width="100px" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_height="wrap_content" android:layout_marginLeft="4dp" />
			<EditText android:id="@+id/value_phonenum" android:text="" android:layout_width="200px" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_height="wrap_content" />
    	</TableRow>
    	
    	<TableRow android:layout_height="wrap_content" android:id="@+id/tableRow7" android:layout_width="fill_parent">
			<TextView android:id="@+id/title_phonemodel" android:text="Model" android:layout_width="100px" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_height="wrap_content" android:layout_marginLeft="4dp" />
			<EditText android:id="@+id/value_phonemodel" android:text="" android:layout_width="200px" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_height="wrap_content" />
    	</TableRow>
    	
    	<TableRow android:layout_height="wrap_content" android:id="@+id/tableRow8" android:layout_width="fill_parent">
			<TextView android:id="@+id/title_androidver" android:text="And. Ver" android:layout_width="100px" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_height="wrap_content" android:layout_marginLeft="4dp" />
			<EditText android:id="@+id/value_androidver" android:text="" android:layout_width="200px" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_height="wrap_content" />
    	</TableRow>
    	
    	<TableRow android:layout_height="wrap_content" android:id="@+id/tableRow9" android:layout_width="fill_parent">
			<TextView android:id="@+id/title_consumedate" android:text="C. Date" android:layout_width="100px" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_height="wrap_content" android:layout_marginLeft="4dp" />
			<EditText android:id="@+id/value_consumedate" android:text="" android:layout_width="200px" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_height="wrap_content" />
    	</TableRow>
    	
       	<TableRow android:layout_height="wrap_content" android:id="@+id/tableRow10" android:layout_width="fill_parent">
			<TextView android:id="@+id/title_vercode" android:text="Ver Code" android:layout_width="100px" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_height="wrap_content" android:layout_marginLeft="4dp" />
			<EditText android:id="@+id/value_vercode" android:text="" android:layout_width="200px" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_height="wrap_content" />
    	</TableRow>
    	
    </TableLayout>
	
	<!-- ===================== Action Area ===================== -->
	<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"  
    	android:layout_width="fill_parent" android:layout_height="wrap_content">  
    
    <TableRow android:layout_height="wrap_content" android:id="@+id/tableRow12" android:layout_width="fill_parent">
        <Button android:id="@+id/editbutton" android:text="@string/query_edit" android:layout_width="65dp" android:layout_height="wrap_content" android:layout_marginLeft="4dp" android:layout_marginTop="20dp" />
        <Button android:id="@+id/applybutton" android:text="@string/query_apply" android:layout_width="65dp" android:layout_height="wrap_content" android:layout_marginLeft="4dp" android:layout_marginTop="20dp" />
        <Button android:id="@+id/delbutton" android:text="@string/query_del" android:layout_width="65dp" android:layout_height="wrap_content" android:layout_marginLeft="4dp" android:layout_marginTop="20dp" />
        <Button android:id="@+id/insertbutton" android:text="@string/query_insert" android:layout_width="65dp" android:layout_height="wrap_content" android:layout_marginLeft="4dp" android:layout_marginTop="20dp" />
        <Button android:id="@+id/cancelbutton" android:text="@string/query_cancel" android:layout_width="65dp" android:layout_height="wrap_content" android:layout_marginLeft="4dp" android:layout_marginTop="20dp" />
    </TableRow>
    
	</TableLayout>
</LinearLayout>
</ScrollView>